src/css/homepage.css
.homepage-hero {
  display: flex;
  width: 70%;
  flex-direction: column;
  align-items: center;
  margin: 0 auto;
}

.homepage-content {
  padding-top: 50px;
  background-image: linear-gradient(
      to top,
      rgba(0, 0, 0, 0) 0%,
      rgba(0, 0, 0, 0) 30%,
      rgba(0, 0, 0, 0.65) 100%
    ),
    url('/images/imbala-bg.jpg');
  background-position: right;
  background-size: cover;
  background-repeat: no-repeat;
  color: #fff;
}

.homepage-hero-text {
  text-align: center;
  font-size: 30px;
  line-height: 40px;
  letter-spacing: -0.96px;
  text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
}

.homepage-actions-buttons {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 650px;
  margin-bottom: 20px;
}

.homepage-actions-buttons .imbala-button {
  width: unset;
  flex: 1 1 180px;
}

.homepage-address {
  margin-bottom: 30px;
  font-size: 22px;
  letter-spacing: -0.8px;
  color: #ecf0f1;
  text-align: center;
}

.homepage-address-line {
  display: block;
  margin: 7.5px 0;
}

@media (min-width: 572px) {
  .homepage-hero {
    height: 100vh;
  }
}

@media (min-width: 768px) {
  .homepage-actions-buttons .imbala-button {
    flex-basis: 220px;
  }
}

@media (min-width: 1024px) {
  .homepage-hero {
    margin-top: -40px;
    justify-content: center;
  }

  .homepage-hero-text {
    max-width: 700px;
  }

  .homepage-actions-buttons {
    width: 560px;
    justify-content: space-between;
  }

  .homepage-actions-buttons .imbala-button {
    flex-basis: 230px;
  }
}

